--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ colorama==0.4.6
 cssbeautifier==1.14.9
 dill==0.3.7
 Django==4.2.4
+django-filter==23.3
+djangorestframework==3.14.0
 djlint==1.32.1
 EditorConfig==0.12.3
 html-tag-names==0.1.2
@@ -13,11 +15,13 @@ isort==5.12.0
 jsbeautifier==1.14.9
 json5==0.9.14
 lazy-object-proxy==1.9.0
+Markdown==3.5
 mccabe==0.7.0
 pathspec==0.11.2
 Pillow==10.0.0
 platformdirs==3.10.0
 pylint==2.17.5
+pytz==2023.3.post1
 PyYAML==6.0.1
 regex==2023.8.8
 six==1.16.0
